DTS-40056 - fixed sonar issues